# pong

./: CMakeLists.txt  README.md  makefile
src/engine/: CMakeLists.txt  GLFWinit.hpp  GLObject.h  camera.h  log.cpp  mesh.h  model.h  pong.hpp  shader.h  shaders.hpp  textures.hpp
src/pong/: main.cpp
src/shaders/: scene.fragment  scene.vertex
